--- a/_css/minimal-mistakes.css
+++ b/_css/minimal-mistakes.css
@@ -1868,7 +1868,7 @@ th {
 
 .masthead {
   position: relative;
-  border-bottom: 1px solid #f2f3f3;
+  /* border-bottom: 1px solid #f2f3f3; */
   -webkit-animation: intro 0.3s both;
   animation: intro 0.3s both;
   -webkit-animation-delay: 0.15s;
