--- a/_css/minimal-mistakes.css
+++ b/_css/minimal-mistakes.css
@@ -679,9 +679,14 @@ html {
 body {
   margin: 0;
   padding: 0;
-  color: #494e52;
+  color: #17252A;
   font-family: "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
+  font-weight: 350;
   line-height: 1.5;
+}
+
+strong {
+  font-weight: 500;
 }
 
 body.overflow--hidden {
@@ -1921,7 +1926,6 @@ th {
   display: flex;
   -ms-flex-item-align: center;
   align-self: center;
-  font-size: 20;
   font-weight: 500;
   z-index: 20;
 }
@@ -2143,7 +2147,6 @@ th {
   align-items: center;
   min-height: 2em;
   background: #fff;
-  font-weight: 350;
 }
 
 .greedy-nav a {
@@ -3726,7 +3729,6 @@ a.reversefootnote:hover {
 
 .page__hero--overlay .page__lead {
   max-width: 768px;
-  font-weight: 350;
 }
 
 .page__hero--overlay .page__title {
